--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -40,9 +40,7 @@ jobs:
 
     - name: 1. Run Job
       run: |
-          cd cloud
-          az ml job create --file job.yaml --name $APP_NAME_$GITHUB_RUN_ID --stream 
-          cd ..
+          az ml job create --file ./cloud/job.yml --name $APP_NAME_$GITHUB_RUN_ID --stream 
 
     - name: 2. Register Model
       run: |
