corrected paths issue, faster model

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -7,9 +7,9 @@ on:
     branches:
       - main
     paths:
-      - ./*.py
-      - ./*.yml
-      - ./cloud/*.yml
+      - '**.py'
+      - '**.yml'
+      - '**.yaml'
 jobs:
   ml-workflow:
     runs-on: ubuntu-latest
@@ -66,7 +66,7 @@ jobs:
           DEPLOYMENTS=$(az ml endpoint show --name $APP_NAME-endpoint --query 'deployments | length(@)' | tr -d "\r")
           if [[ $DEPLOYMENTS  -eq '1' ]]
           then
-            DEPLOY_NAME=$(az ml endpoint show --name earnings-endpoint --query deployments[0].name | tr -d '"')
+            DEPLOY_NAME=$(az ml endpoint show --name $APP_NAME-endpoint --query deployments[0].name | tr -d '"')
             python ./cloud/replace.py ./cloud/template.deploy --name $APP_NAME-endpoint --model $APP_NAME-model --version $MODEL_VER > ./cloud/$GITHUB_RUN_ID.yml
             echo New Deployment Definition:
             cat ./cloud/$GITHUB_RUN_ID.yml
