corrected deployments - added updated scoring

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -58,7 +58,7 @@ jobs:
         MODEL_VER=$(az ml model show -n $APP_NAME-model --query version | tr -d "\r")
         if [[ $ENDPOINT -eq '0' ]]
         then
-          python ./cloud/replace.py ./cloud/full.deploy --name $APP_NAME-endpoint --model $APP_NAME-model --version $MODEL_VER > ./cloud/$GITHUB_RUN_ID.yml
+          python ./cloud/replace.py ./cloud/full.deploy --name $APP_NAME-endpoint --model $APP_NAME-model --version $MODEL_VER --deployment blue > ./cloud/$GITHUB_RUN_ID.yml
           echo Endpoint Creation:
           cat ./cloud/$GITHUB_RUN_ID.yml
           az ml endpoint create -f ./cloud/$GITHUB_RUN_ID.yml
@@ -73,7 +73,22 @@ jobs:
             az ml endpoint update --name $APP_NAME-endpoint --deployment-file ./cloud/$GITHUB_RUN_ID.yml --traffic "$DEPLOY_NAME:100,$APP_NAME-$GITHUB_RUN_ID:0"
             az ml endpoint update --name $APP_NAME-endpoint --traffic "$DEPLOY_NAME:90,$APP_NAME-$GITHUB_RUN_ID:10"
           else
-            echo "Too many deployments to proceed safely - will bail out for now."
+            echo "Enumerating deployments."
+            az ml endpoint show --name $APP_NAME-endpoint --query traffic > ./cloud/$GITHUB_RUN_ID.json
+            cat ./cloud/$GITHUB_RUN_ID.json
+            DEPLOY_NAME=$(python ./cloud/replace.py ./cloud/$GITHUB_RUN_ID.json --min | tr -d '"')
+            MIN_DEPLOY=$(python ./cloud/replace.py ./cloud/$GITHUB_RUN_ID.json --min | tr -d '"')
+
+            az ml endpoint update --name $APP_NAME-endpoint --traffic "$DEPLOY_NAME:100,$MIN_DEPLOY:0"
+            python ./cloud/replace.py ./cloud/full.deploy --name $APP_NAME-endpoint --model $APP_NAME-model --version $MODEL_VER --deployment $DEPLOY_NAME > ./cloud/$GITHUB_RUN_ID.yml
+            cat ./cloud/$GITHUB_RUN_ID.yml
+            az ml endpoint update --name $APP_NAME-endpoint -f ./cloud/$GITHUB_RUN_ID.yml
+            
+            python ./cloud/replace.py ./cloud/template.deploy --name $APP_NAME-endpoint --model $APP_NAME-model --version $MODEL_VER > ./cloud/$GITHUB_RUN_ID.yml
+            echo New Deployment Definition:
+            cat ./cloud/$GITHUB_RUN_ID.yml
+            az ml endpoint update --name $APP_NAME-endpoint --deployment-file ./cloud/$GITHUB_RUN_ID.yml --traffic "$DEPLOY_NAME:100,$APP_NAME-$GITHUB_RUN_ID:0"
+            az ml endpoint update --name $APP_NAME-endpoint --traffic "$DEPLOY_NAME:90,$APP_NAME-$GITHUB_RUN_ID:10"
           fi
         fi
 
