--- a/cloud/job.yml
+++ b/cloud/job.yml
@@ -2,11 +2,8 @@ $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 experiment_name: rocksie
 code:
   local_path: ../
-command: python trainer.py --config config.yml --trainer.default_root_dir ./outputs --data.data_dir {inputs.training_data}
-environment: azureml:pytorch-lightning:6
+command: python trainer.py --config config.yml --trainer.default_root_dir ./outputs --data.data_dir /home/jiadu/data/roshambo
+environment: azureml:pytorch-lightning-cpu:1
 compute:
-  target: azureml:gandalf
-inputs:
-  training_data:
-    data: azureml:roshambo:1
-    mode: mount
+  target: azureml:arc-aks-hci
+
