--- a/.github/workflows/hci-train.yml
+++ b/.github/workflows/hci-train.yml
@@ -31,12 +31,12 @@ jobs:
     - name: azure login
       uses: azure/login@v1
       with:
-        creds: ${{secrets.AZURE_TOKEN}}
+        creds: ${{secrets.HCI_TOKEN}}
 
     - name: set aml defaults
       run: |
-          az config set defaults.workspace=${{secrets.AML_WORKSPACE}}
-          az config set defaults.group=${{secrets.AML_RG}}
+          az config set defaults.workspace=${{secrets.HCI_WORKSPACE}}
+          az config set defaults.group=${{secrets.HCI_RG}}
 
     - name: 1. Run Job
       run: |
@@ -76,30 +76,7 @@ jobs:
             az ml endpoint update --name $APP_NAME-endpoint --traffic "$DEPLOY_NAME:90,$APP_NAME-$GITHUB_RUN_ID:10"
 
           else
-            echo "Enumerating deployments."
-            az ml endpoint show --name $APP_NAME-endpoint --query traffic > ./cloud/$GITHUB_RUN_ID.json
-            cat ./cloud/$GITHUB_RUN_ID.json
-
-            DEPLOY_NAME=$(python ./cloud/deployments.py ./cloud/$GITHUB_RUN_ID.json --max | tr -d '"')
-            MIN_DEPLOY=$(python ./cloud/deployments.py ./cloud/$GITHUB_RUN_ID.json --min | tr -d '"')
-
-            echo Main: $DEPLOY_NAME
-            echo Sub: $MIN_DEPLOY
-
-            az ml endpoint update --name $APP_NAME-endpoint --traffic "$DEPLOY_NAME:100,$MIN_DEPLOY:0"
-            python ./cloud/replace.py ./cloud/full.deploy --name $APP_NAME-endpoint --model $APP_NAME-model --version $MODEL_VER --deployment $DEPLOY_NAME > ./cloud/$GITHUB_RUN_ID.yml
-            cat ./cloud/$GITHUB_RUN_ID.yml
-
-            echo az ml endpoint update --name $APP_NAME-endpoint -f ./cloud/$GITHUB_RUN_ID.yml
-            az ml endpoint update --name $APP_NAME-endpoint -f ./cloud/$GITHUB_RUN_ID.yml
-            
-            python ./cloud/replace.py ./cloud/template.deploy --name $APP_NAME-$GITHUB_RUN_ID --model $APP_NAME-model --version $MODEL_VER > ./cloud/$GITHUB_RUN_ID.yml
-            echo New Deployment Definition:
-            cat ./cloud/$GITHUB_RUN_ID.yml
-            echo az ml endpoint update --name $APP_NAME-endpoint --deployment-file ./cloud/$GITHUB_RUN_ID.yml --traffic "$DEPLOY_NAME:100,$APP_NAME-$GITHUB_RUN_ID:0"
-            az ml endpoint update --name $APP_NAME-endpoint --deployment-file ./cloud/$GITHUB_RUN_ID.yml --traffic "$DEPLOY_NAME:100,$APP_NAME-$GITHUB_RUN_ID:0"
-            echo az ml endpoint update --name $APP_NAME-endpoint --traffic "$DEPLOY_NAME:90,$APP_NAME-$GITHUB_RUN_ID:10"
-            az ml endpoint update --name $APP_NAME-endpoint --traffic "$DEPLOY_NAME:90,$APP_NAME-$GITHUB_RUN_ID:10"
+            echo "Too many deployments... Bailing"
           fi
         fi
 
