corrected to local deployment target

--- a/cloud/test_hci_deployment.yml
+++ b/cloud/test_hci_deployment.yml
@@ -1,15 +1,15 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.schema.json
-name: {name}
+name: rocksie-endpoint
 type: online
 target: azureml:arc-aks-hci
 auth_mode: key
 traffic:
-  {deployment}: 100
+  blue: 100
 
 deployments:
-  - name: {deployment}
+  - name: blue
     app_insights_enabled: true
-    model: azureml:{model}:{version}
+    model: azureml:rocksie-model:1
     code_configuration:
       code: 
         local_path: ../
@@ -25,7 +25,7 @@ deployments:
       max_queue_wait_ms: 1000
     resource_requirements:
       cpu: 0.5
-      memory_in_gb: 5
+      memory_in_gb: 1.5
     liveness_probe:
       initial_delay: 10
       period: 10
