--- a/.github/workflows/hci-train.yml
+++ b/.github/workflows/hci-train.yml
@@ -14,7 +14,7 @@ jobs:
   ml-workflow:
     runs-on: ubuntu-latest
     env:
-      APP_NAME: shopctrl
+      APP_NAME: shopai
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.3
