--- a/cloud/test_hci_deployment.yml
+++ b/cloud/test_hci_deployment.yml
@@ -1,7 +1,7 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.schema.json
 name: vision-endpoint
 type: online
-target: azureml:aks-hci-2cpu6gb
+target: azureml:tailwind-k8s
 auth_mode: key
 traffic:
   blue: 100
