--- a/cloud/job.yml
+++ b/cloud/job.yml
@@ -1,12 +1,15 @@
-$schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
+$schema: https://azuremlschemas.azureedge.net/preview/commandJob.schema.json
 experiment_name: rocksie
 code:
   local_path: ../
-command: python trainer.py --config config.yml --trainer.default_root_dir ./outputs --data.data_dir {inputs.training_data}
+command:  >-
+  python trainer.py 
+  --config config.yml 
+  --trainer.default_root_dir ./outputs 
+  --data.data_dir {inputs.images}
 environment: azureml:pytorch-lightning:6
-compute:
-  target: azureml:gandalf
+compute: azureml:gandalf
 inputs:
-  training_data:
-    data: azureml:roshambo:1
+  images:
+    dataset: azureml:roshambo:1
     mode: mount
