--- a/cloud/deployment.yml
+++ b/cloud/deployment.yml
@@ -5,8 +5,6 @@ code_configuration:
   code: 
     local_path: ../
   scoring_script: score.py    
-environment: 
-  conda_file: environment/conda.yml
-  image: azureml:pytorch-lightning-gpu-deploy:3
+environment: azureml:pytorch-lightning-gpu-deploy:3
 instance_type: Standard_NC6s_v3
 instance_count: 1
