--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -49,7 +49,7 @@ jobs:
     needs: [experiment]
     runs-on: ubuntu-latest
     outputs:
-      model_id: ${{steps.register_model.register.model_id}}
+      model_id: ${{steps.register.register.model_id}}
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.3
@@ -145,7 +145,7 @@ jobs:
           az config set defaults.group=${{secrets.AML_RG}}
     - name: Add Deployment
       run: |
-        LATEST_MODEL_VERSION=${{needs.register_model.outputs.model_id}}
+        LATEST_MODEL_VERSION=${{needs.register.outputs.model_id}}
         MODEL_REF=azureml:$APP_NAME-model:$LATEST_MODEL_VERSION
         echo $MODEL_REF
 
