corrected model name

--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -142,7 +142,7 @@ jobs:
     - name: Add Deployment
       run: |
         LATEST_MODEL_VERSION=$(az ml model show -n $APP_NAME-model -o tsv --query version)
-        MODEL_REF=azureml:risk-model:$LATEST_MODEL_VERSION
+        MODEL_REF=azureml:$APP_NAME-model:$LATEST_MODEL_VERSION
         echo $MODEL_REF
 
         # create deployment
@@ -155,6 +155,6 @@ jobs:
             az ml online-endpoint update --name $APP_NAME-endpoint --traffic "$APP_NAME-$GITHUB_RUN_ID=100" --set tags.PROD_DEPLOYMENT=$APP_NAME-$GITHUB_RUN_ID
         else
             # rollout new traffic percentages
-            az ml online-endpoint update -n $APP_NAME-endpoint --traffic "$PROD_DEPLOYMENT=90 $APP_NAME-$GITHUB_RUN_ID=10"        
+            az ml online-endpoint update --name $APP_NAME-endpoint --traffic "$PROD_DEPLOYMENT=90 $APP_NAME-$GITHUB_RUN_ID=10"        
         fi
   
