checking cli commands

--- a/.github/workflows/training.yml
+++ b/.github/workflows/training.yml
@@ -146,15 +146,18 @@ jobs:
         echo $MODEL_REF
 
         # create deployment
+        echo az ml online-deployment create --name $APP_NAME-$GITHUB_RUN_ID --endpoint $APP_NAME-endpoint -f ./cloud/deployment.yml --set model=$MODEL_REF
         az ml online-deployment create --name $APP_NAME-$GITHUB_RUN_ID --endpoint $APP_NAME-endpoint -f ./cloud/deployment.yml --set model=$MODEL_REF
 
         # check for prod and adjust traffic (if exists)
         PROD_DEPLOYMENT=$(az ml online-endpoint show -n $APP_NAME-endpoint -o tsv --query "tags.PROD_DEPLOYMENT")
         if [[ -z "$PROD_DEPLOYMENT" ]]; then
             # tag the current deployment as prod and set traffic to 100%
+            echo az ml online-endpoint update --name $APP_NAME-endpoint --traffic "$APP_NAME-$GITHUB_RUN_ID=100" --set tags.PROD_DEPLOYMENT=$APP_NAME-$GITHUB_RUN_ID
             az ml online-endpoint update --name $APP_NAME-endpoint --traffic "$APP_NAME-$GITHUB_RUN_ID=100" --set tags.PROD_DEPLOYMENT=$APP_NAME-$GITHUB_RUN_ID
         else
             # rollout new traffic percentages
-            az ml online-endpoint update --name $APP_NAME-endpoint --traffic "$PROD_DEPLOYMENT=90 $APP_NAME-$GITHUB_RUN_ID=10"        
+            echo az ml online-endpoint update --name $APP_NAME-endpoint --traffic "$PROD_DEPLOYMENT=90 $APP_NAME-$GITHUB_RUN_ID=10"
+            az ml online-endpoint update --name $APP_NAME-endpoint --traffic "$PROD_DEPLOYMENT=90 $APP_NAME-$GITHUB_RUN_ID=10"
         fi
   
