--- a/cloud/deployment.yml
+++ b/cloud/deployment.yml
@@ -1,10 +1,11 @@
-name: blue
-app_insights_enabled: true
-model: azureml:rocksie-model:1
-code_configuration:
-  code:
-    local_path: ../
-  scoring_script: score.py
-environment: azureml:pytorch-lightning-gpu-deploy:3
-instance_type: Standard_NC6s_v3
-instance_count: 1
+green: 0
+  - name: green
+    app_insights_enabled: true
+    model: azureml:rocksie-model:1
+    code_configuration:
+      code:
+        local_path: ../
+      scoring_script: score.py
+    environment: azureml:pytorch-lightning-gpu-deploy:3
+    instance_type: Standard_NC6s_v3
+    instance_count: 1
